--- a/index.css
+++ b/index.css
@@ -59,6 +59,7 @@ a {
     text-decoration: none;
     color: #ff4500;
     font-weight: bold;
+    padding: 10px;
  }
 
  .header-nav nav a:hover {
@@ -104,6 +105,16 @@ a {
 .proyectos-container ul li{
     display: inline-flex;
     padding: 10px;
+}
+
+#pie-de-pagina {
+    text-align: center;
+    transition: text-shadow 0.3s ease-in-out;
+}
+
+
+#pie-de-pagina:hover {
+    text-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
 }
  
 .roboto-flex-400 {
