--- a/index.css
+++ b/index.css
@@ -117,7 +117,7 @@ a {
     text-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
 }
  
-.roboto-flex-400 {
+roboto-flex-400 {
     font-family: "Roboto Flex", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
